--- a/testVue.html
+++ b/testVue.html
@@ -8,16 +8,24 @@
 <script src="./packages/reactivity/dist/reactivity.global.js"></script>
 <script>
     const { reactive, readonly, toRaw, effect } = VueReactivity
+    const pMap = (new Map([
+        ['key1', 'value1'],
+        ['key2', 'value2']
+    ]))
+    // const key = { name: 1 }
+    // const pKey = reactive(key)
+
+    
+    
+    // effect(() => {
+    //     console.log(pMap.size)
+    // })
+    // pMap.set('key2','value3')
+
+    const set=new Set([1,2,3])
+    console.log(set.entries().next())
 
 
-    const obj = reactive({
-        name: 1
-    })
-    effect(() => {
-        console.log(obj.hasOwnProperty('name'))
-
-    })
-    delete obj.name
 </script>
 
 </html>
